add_subdirectory(shell)
add_subdirectory(sqllogictest)
add_subdirectory(wasm-shell)
add_subdirectory(b_plus_tree_printer)
add_subdirectory(wasm-bpt-printer)
add_subdirectory(terrier_bench)
# Configure CCache if available
find_program(CCACHE_FOUND ccache)
if(CCACHE_FOUND)
        set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
        set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
endif(CCACHE_FOUND)
